# Nocturn-Engine

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  libs.7z
assets/blockstates/: air.json  cactus.json  deadshrub.json  dirt.json  grass.json  oakbark.json  oakleaf.json  rose.json  sand.json  stone.json  tallgrass.json  water.json
assets/shaders/: block.fs  block.vs  block_fragment.glsl  block_vertex.glsl  light.fs  light.vs  line.fs  line.vs  line_vertex.glsl  ray_fragment.glsl  ray_vertex.glsl  skybox.fs  skybox.vs  skybox_fragment.glsl  skybox_vertex.glsl  texture.vs
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CMakeLists.txt
libs/glfw/src/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/stb/: CMakeLists.txt
libs/stb/include/: stb_image.h
source/: CMakeLists.txt  CMakeLists.txt.bak  ProjectArhitecture.txt  main.cpp
source/Application/: application.cpp  application.h
source/Application/Config/: config.hpp
source/Application/Input/: keyboard.cpp  mouse.h
source/Application/Window/: window.cpp  window.h
source/Context/Components/: ActorComponent.cpp  ActorComponent.h  BoxComponent.cpp  BoxComponent.h  CameraComponent.cpp  CameraComponent.h  TransformComponent.cpp  TransformComponent.h
source/Context/GameFramework/: Actor.cpp  Actor.h  Character.cpp  Character.h  Controller.cpp  Controller.h  IController.h  Spectator.cpp  Spectator.h
source/Core/: core.cpp  core.h
source/Core/Algorithms/: states.hpp
source/Core/Async/: task.cpp  task.h  threadpool.cpp
source/Core/Components/: constants.hpp  transform.cpp  transform.h
source/Core/Error/: ErrorHandle.cpp  ErrorHandle.h
source/Core/GL/: GLFunctions.cpp
source/Core/Math/: frustum.cpp  frustum.h  glm.hpp  math.hpp  noise.cpp  ray.cpp  ray.h
source/Core/Misc/: AssertionMacros.cpp  AssertionMacros.h
source/Core/Physics/: AABB.cpp  physics.cpp  physics.h  rigidbody.cpp  rigidbody.h
source/Core/Platform/: Concepts.h  platform.h
source/Core/Scene/: scene.cpp  scene.h
source/Core/Types/: constants.h  rstatus.h  typedef.hpp
source/Core/Util/: time.hpp
source/Gui/: HUD.cpp  HUD.h
source/Rendering/Components/Entity/: camera.cpp  camera.h  entity.h  player.cpp  player.h  spectator.cpp  spectator.h
source/Rendering/Components/Shaders/: shader.cpp  shader.h  skyboxshader.cpp  skyboxshader.h
source/Rendering/Components/Textures/: texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  texturecube.cpp  texturecube.h
source/Rendering/Renderer/: IRenderer.h  MasterRenderer.cpp  MasterRenderer.h  baserenderer.h  chunkrenderer.cpp  chunkrenderer.h  renderer.cpp  renderer.h  skyboxrenderer.cpp  skyboxrenderer.h  style.cpp  style.h
source/Rendering/Renderer/Data/: model.hpp
source/Rendering/World/: world.cpp  world.h
source/Rendering/World/Block/: block.cpp  block.h  blockdata.cpp  blockdata.h  blockdatabase.cpp  blockdatabase.h
source/Rendering/World/Chunk/: chunkmanager.cpp  chunkmanager.h  chunkmesh.cpp  chunkmesh.h  chunksection.cpp  chunksection.h
source/Rendering/World/Generation/Terrain/: terraingeneration.cpp
source/libs/: CMakeLists.txt  backup_glad.rar
source/libs/glad/: CMakeLists.txt
source/libs/glfw/: CMakeLists.txt
source/libs/stb/: CMakeLists.txt.bak
source/src/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  backup_Scene  glad.c  main.cpp  project_tips
source/src/application/: CMakeLists.txt  application.cpp  application.h
source/src/application/config/: config.hpp
source/src/application/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
source/src/application/player/: player.cpp  player.h
source/src/application/scene/: scene.cpp  scene.h
source/src/application/window/: window.cpp  window.h
source/src/core/: CMakeLists.txt  core.h  scene.cpp  scene.h
source/src/core/GL/: GLFunctions.cpp  GLFunctions.h
source/src/core/algorithms/: frustrum.h
source/src/core/async/: task.cpp  task.h  threadpool.h
source/src/core/components/: constants.hpp  transform.cpp  transform.h
source/src/core/error/: error_handle.cpp
source/src/core/logging/: logging.cpp  logging.h
source/src/core/math/: glm.hpp  math.hpp  noise.cpp  noise.h  ray.cpp  ray.h
source/src/core/physics/: AABB.cpp  AABB.h  enviroment.cpp  enviroment.h  physics.cpp  physics.h  rigidbody.cpp  rigidbody.h
source/src/core/platform/: platform.h
source/src/core/threads/: queuesafe.h  threadpool.cpp  threadpool.h
source/src/core/types/: rstatus.h  typedef.hpp
source/src/core/util/: singleton.h
source/src/rendering/: CMakeLists.txt
source/src/rendering/components/: CMakeLists.txt  CMakeLists.txt.bak
source/src/rendering/components/entity/: camera.cpp  camera.h  entity.cpp  entity.h  player.cpp  player.h  spectator.cpp
source/src/rendering/components/shaders/: chunkshader.cpp  chunkshader.h  shader.cpp  shader.h  skyboxshader.cpp  skyboxshader.h
source/src/rendering/components/textures/: textureatlas.cpp  textureatlas.h  texturebasic.cpp  texturebasic.h  texturecube.cpp  texturecube.h
source/src/rendering/data/: buffer.cpp  buffer.h  camera.cpp  camera.h  mesh.hpp  model.cpp  model.h  vertex.hpp  vertexarray.cpp  vertexarray.h
source/src/rendering/renderer/: baserenderer.cpp  baserenderer.h  chunkrenderer.cpp  chunkrenderer.h  renderer.cpp  renderer.h  renderinfo.hpp  skyboxrenderer.cpp  skyboxrenderer.h  style.cpp  style.h
source/src/rendering/renderer/data/: model.hpp
source/src/rendering/world/: CMakeLists.txt  CMakeLists.txt.bak  world.cpp  world.h  worldconstants.h
source/src/rendering/world/block/: block.cpp  block.h  blockdata.cpp  blockdata.h  blockdatabase.cpp  blockdatabase.h  blockdataholder.hpp  blockid.hpp  blocksection.cpp  blocksection.h
source/src/rendering/world/chunk/: chunkmanager.cpp  chunkmanager.h  chunkmesh.cpp  chunkmesh.h  chunksection.cpp  chunksection.h
source/src/rendering/world/generation/biome/: biome.h
source/src/rendering/world/generation/terrain/: terraingeneration.h
